--- a/stdeb.cfg
+++ b/stdeb.cfg
@@ -1,6 +1,9 @@
 [updoc]
 processes = updoc-gunicorn:/usr/bin/updoc-gunicorn
+    updoc-celery:/usr/bin/updoc-celery worker
 extra_postinst3 = postinst.sh
+process_manager = systemd
+username = updoc
 
 [djangofloor]
 
@@ -13,11 +16,13 @@ pre_source = debtools.multideb.remove_tests_dir
 [celery]
 pre_source = djangofloor.deb_fixes.fix_celery
 
+[Django]
+pre_source = djangofloor.deb_fixes.fix_django
+
 [pathlib]
 pre_source = djangofloor.deb_fixes.fix_pathlib
 
 [msgpack-python]
-Package = python-msgpack
 Package3 = python3-msgpack
 pre_source = djangofloor.deb_fixes.fix_msgpack
 
