--- a/stdeb.cfg
+++ b/stdeb.cfg
@@ -26,6 +26,7 @@ pre_source = djangofloor.deb_fixes.fix_pathlib
 Package3 = python3-msgpack
 pre_source = djangofloor.deb_fixes.fix_msgpack
 
-[python-openid]
-Package = python-openid
+[python3-openid]
+Package3 = python3-openid
+
 
