--- a/stdeb.cfg
+++ b/stdeb.cfg
@@ -2,7 +2,6 @@
 processes = updoc-gunicorn:/usr/bin/updoc-gunicorn
     updoc-celery:/usr/bin/updoc-celery worker
 extra_postinst3 = postinst.sh
-process_manager = systemd
 username = updoc
 
 [djangofloor]
@@ -26,6 +25,7 @@ pre_source = djangofloor.deb_fixes.fix_pathlib
 Package3 = python3-msgpack
 pre_source = djangofloor.deb_fixes.fix_msgpack
 
-[python-openid]
-Package = python-openid
+[python3-openid]
+Package3 = python3-openid
+
 
