--- a/dev/Ubuntu-16.04/Vagrantfile
+++ b/dev/Ubuntu-16.04/Vagrantfile
@@ -24,7 +24,7 @@ Vagrant.configure(2) do |config|
   # within the machine from a port on the host machine. In the example below,
   # accessing "localhost:8080" will access port 80 on the guest machine.
   # config.vm.network "forwarded_port", guest: 80, host: 8080
-  config.vm.network "forwarded_port", guest: 443, host: 10080
+  config.vm.network "forwarded_port", guest: 8129, host: 10080
 
 
   # Create a private network, which allows host-only access to the machine
@@ -78,25 +78,50 @@ Vagrant.configure(2) do |config|
 sudo locale-gen `echo $LC_ALL`
 sudo apt-get update
 # sudo apt-get install -y libbz2-dev libdb-dev libc6-dev libgdbm-dev libncursesw5-dev libreadline-dev libsqlite3-dev libssl-dev libz-dev liblzma-dev tk-dev
+sudo apt-get install -y npm
 # sudo apt-get install -y ruby ruby-dev
 # sudo gem install fpm
+sudo npm -g install yuglify
 sudo apt-get install -y virtualenvwrapper python3.5 python3.5-dev python3-pip build-essential
 sudo -H pip3 install git+https://github.com/d9pouces/EasyDjango.git
 sudo -H pip3 install git+https://github.com/d9pouces/updoc.git
-sudo mkdir -p /var/updoc /etc/updoc
+sudo mkdir -p /var/updoc/logs /etc/updoc
 sudo adduser --system --shell /bin/bash --disabled-password --gecos "" updoc
 cat << EOF | sudo -H tee /etc/updoc/settings.ini
 [global]
-data_path = /var/updoc
+data = /var/updoc
 EOF
 sudo chown -R updoc: /var/updoc /etc/updoc
 sudo -H -u updoc updoc-manage migrate  # create the database (SQLite by default)
 sudo -H -u updoc updoc-manage collectstatic --noinput  # prepare static files (CSS, JS, …)
 
+sudo apt-get install -y supervisor
+cat << EOF | sudo tee /etc/supervisor/conf.d/updoc.conf
+[program:updoc_aiohttp]
+command = /usr/local/bin/updoc-aiohttp
+user = updoc
+[program:updoc_celery_celery]
+command = /usr/local/bin/updoc-celery worker -Q celery
+user = updoc
+[program:updoc_celery_slow]
+command = /usr/local/bin/updoc-celery worker -Q slow
+user = updoc
+EOF
+sudo service supervisor stop
+sudo service supervisor start
+cat << EOF | sudo -H -u updoc updoc-manage shell
+from django.contrib.auth import get_user_model
+M = get_user_model()
+u = M(username='demo')
+u.set_password('demo')
+u.save()
+u = M(username='admin', is_staff=True, is_superuser=True)
+u.set_password('admin')
+u.save()
+EOF
 # sudo apt-get install -y rng-tools git
 # echo "HRNGDEVICE=/dev/urandom" | sudo tee -a /etc/default/rng-tools
 # sudo /etc/init.d/rng-tools restart
-# git clone https://github.com/d9pouces/updoc.git
 # chown -R vagrant:vagrant updoc
 SHELL
 
