--- a/dev/Ubuntu-16.04/Vagrantfile
+++ b/dev/Ubuntu-16.04/Vagrantfile
@@ -85,7 +85,7 @@ sudo apt-get install -y npm
 sudo npm -g install yuglify
 sudo apt-get install -y virtualenvwrapper python3.5 python3.5-dev python3-pip build-essential
 sudo -H pip3 install git+https://github.com/d9pouces/EasyDjango.git
-sudo -H pip3 install git+https://github.com/d9pouces/updoc.git
+sudo -H pip3 install updoc
 sudo mkdir -p /var/updoc/logs /etc/updoc
 sudo adduser --system --shell /bin/bash --disabled-password --gecos "" updoc
 cat << EOF | sudo -H tee /etc/updoc/settings.ini
