--- a/dev/Ubuntu-16.10/Vagrantfile
+++ b/dev/Ubuntu-16.10/Vagrantfile
@@ -78,11 +78,12 @@ Vagrant.configure(2) do |config|
 sudo locale-gen `echo $LC_ALL`
 sudo apt-get update
 # sudo apt-get install -y libbz2-dev libdb-dev libc6-dev libgdbm-dev libncursesw5-dev libreadline-dev libsqlite3-dev libssl-dev libz-dev liblzma-dev tk-dev
+sudo apt-get install -y redis-server
 # sudo apt-get install -y ruby ruby-dev
 # sudo gem install fpm
 sudo apt-get install -y npm
 sudo npm -g install yuglify
-sudo apt-get install virtualenvwrapper python3.5 python3.5-dev python3-pip build-essential
+sudo apt-get install -y virtualenvwrapper python3.5 python3.5-dev python3-pip build-essential
 sudo -H pip3 install git+https://github.com/d9pouces/EasyDjango.git
 sudo -H pip3 install updoc
 sudo mkdir -p /var/updoc/logs /etc/updoc
