--- a/dev/Ubuntu-15.10/Vagrantfile
+++ b/dev/Ubuntu-15.10/Vagrantfile
@@ -86,7 +86,7 @@ sudo npm -g install yuglify
 sudo apt-get install -y virtualenvwrapper python3.5 python3.5-dev python3-pip build-essential
 sudo -H pip3 install git+https://github.com/d9pouces/EasyDjango.git
 sudo -H pip3 install updoc
-sudo mkdir -p /var/updoc/logs /etc/updoc
+sudo mkdir -p /var/updoc/log /etc/updoc
 sudo adduser --system --shell /bin/bash --disabled-password --gecos "" updoc
 cat << EOF | sudo -H tee /etc/updoc/settings.ini
 [global]
